--- a/css/halloween.css
+++ b/css/halloween.css
@@ -696,7 +696,7 @@ input[type='checkbox'] {
 .navbar-custom .navbar-toggler {
 	border: none;
 	color: #fff;
-	background: url('https://s3.ax1x.com/2021/01/14/sUwLKx.png');
+	background: url('image/sUwLKx.png');
 	background-size: cover;
 }
 
@@ -722,7 +722,7 @@ input[type='checkbox'] {
 /*    04. Header     */
 /*********************/
 .header {
-	background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url('https://s21.ax1x.com/2024/10/15/pAthbOx.jpg') center center no-repeat;
+	background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url('image/pAthbOx.jpg') center center no-repeat;
 	background-size: cover;
 }
 
@@ -925,7 +925,7 @@ input[type='checkbox'] {
 /*************************/
 .accordion .area-1 {
 	height: 27rem;
-	background: url('https://s21.ax1x.com/2024/10/15/pAt4Kcn.jpg') center center no-repeat;
+	background: url('image/pAt4Kcn.jpg') center center no-repeat;
 	background-size: cover;
 }
 
@@ -1115,7 +1115,7 @@ input[type='checkbox'] {
 
 .tabs .area-2 {
 	height: 27rem;
-	background: url('https://s21.ax1x.com/2024/10/15/pAt4N9J.jpg') center center no-repeat;
+	background: url('image/pAt4N9J.jpg') center center no-repeat;
 	background-size: cover;
 }
 
