--- a/css/styles.css
+++ b/css/styles.css
@@ -696,7 +696,7 @@ input[type='checkbox'] {
 .navbar-custom .navbar-toggler {
 	border: none;
 	color: #fff;
-	background: url('/imgsUwLKx.png');
+	background: url('/img/sUwLKx.png');
 	background-size: cover;
 }
 
@@ -722,7 +722,7 @@ input[type='checkbox'] {
 /*    04. Header     */
 /*********************/
 .header {
-	background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url('/imgachXdg.jpg') center center no-repeat;
+	background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url('/img/achXdg.jpg') center center no-repeat;
 	background-size: cover;
 }
 
@@ -924,7 +924,7 @@ input[type='checkbox'] {
 /*************************/
 .accordion .area-1 {
 	height: 27rem;
-	background: url('/imga4V6BQ.jpg') center center no-repeat;
+	background: url('/img/a4V6BQ.jpg') center center no-repeat;
 	background-size: cover;
 }
 
@@ -1114,7 +1114,7 @@ input[type='checkbox'] {
 
 .tabs .area-2 {
 	height: 27rem;
-	background: url('/imgac5ZB8.jpg') center center no-repeat;
+	background: url('/img/ac5ZB8.jpg') center center no-repeat;
 	background-size: cover;
 }
 
@@ -1709,7 +1709,7 @@ a.back-to-top {
 	width: 2.625rem;
 	height: 2.625rem;
 	border-radius: 1.875rem;
-	background: #ff80ab url("https://img01.sogoucdn.com/app/a/100520146/0B586A7D085D120376A66E886388F822") no-repeat center 47%;
+	background: #ff80ab url("https://img/01.sogoucdn.com/app/a/100520146/0B586A7D085D120376A66E886388F822") no-repeat center 47%;
 	background-size: 1.125rem 1.125rem;
 	text-indent: -9999px;
 }
