--- a/css/bootstrap-reboot.css
+++ b/css/bootstrap-reboot.css
@@ -9,14 +9,20 @@
 *::before,
 *::after {
   box-sizing: border-box;
-}html {
+}
+
+html {
   font-family: sans-serif;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
+}
+
+article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block;
-}body {
+}
+
+body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1rem;
@@ -25,19 +31,29 @@
   color: #212529;
   text-align: left;
   background-color: #fff;
-}[tabindex="-1"]:focus:not(:focus-visible) {
+}
+
+[tabindex="-1"]:focus:not(:focus-visible) {
   outline: 0 !important;
-}hr {
+}
+
+hr {
   box-sizing: content-box;
   height: 0;
   overflow: visible;
-}h1, h2, h3, h4, h5, h6 {
+}
+
+h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 0.5rem;
-}p {
+}
+
+p {
   margin-top: 0;
   margin-bottom: 1rem;
-}abbr[title],
+}
+
+abbr[title],
 abbr[data-original-title] {
   text-decoration: underline;
   -webkit-text-decoration: underline dotted;
@@ -46,93 +62,147 @@ abbr[data-original-title] {
   border-bottom: 0;
   -webkit-text-decoration-skip-ink: none;
   text-decoration-skip-ink: none;
-}address {
+}
+
+address {
   margin-bottom: 1rem;
   font-style: normal;
   line-height: inherit;
-}ol,
+}
+
+ol,
 ul,
 dl {
   margin-top: 0;
   margin-bottom: 1rem;
-}ol ol,
+}
+
+ol ol,
 ul ul,
 ol ul,
 ul ol {
   margin-bottom: 0;
-}dt {
+}
+
+dt {
   font-weight: 700;
-}dd {
+}
+
+dd {
   margin-bottom: .5rem;
   margin-left: 0;
-}blockquote {
+}
+
+blockquote {
   margin: 0 0 1rem;
-}b,
+}
+
+b,
 strong {
   font-weight: bolder;
-}small {
+}
+
+small {
   font-size: 80%;
-}sub,
+}
+
+sub,
 sup {
   position: relative;
   font-size: 75%;
   line-height: 0;
   vertical-align: baseline;
-}sub {
+}
+
+sub {
   bottom: -.25em;
-}sup {
+}
+
+sup {
   top: -.5em;
-}a {
+}
+
+a {
   color: #007bff;
   text-decoration: none;
   background-color: transparent;
-}a:hover {
+}
+
+a:hover {
   color: #0056b3;
   text-decoration: underline;
-}a:not([href]):not([class]) {
+}
+
+a:not([href]):not([class]) {
   color: inherit;
   text-decoration: none;
-}a:not([href]):not([class]):hover {
+}
+
+a:not([href]):not([class]):hover {
   color: inherit;
   text-decoration: none;
-}pre,
+}
+
+pre,
 code,
 kbd,
 samp {
   font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   font-size: 1em;
-}pre {
+}
+
+pre {
   margin-top: 0;
   margin-bottom: 1rem;
   overflow: auto;
   -ms-overflow-style: scrollbar;
-}figure {
+}
+
+figure {
   margin: 0 0 1rem;
-}img {
+}
+
+img {
   vertical-align: middle;
   border-style: none;
-}svg {
+}
+
+svg {
   overflow: hidden;
   vertical-align: middle;
-}table {
+}
+
+table {
   border-collapse: collapse;
-}caption {
+}
+
+caption {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
   color: #6c757d;
   text-align: left;
   caption-side: bottom;
-}th {
+}
+
+th {
   text-align: inherit;
   text-align: -webkit-match-parent;
-}label {
+}
+
+label {
   display: inline-block;
   margin-bottom: 0.5rem;
-}button {
+}
+
+button {
   border-radius: 0;
-}button:focus:not(:focus-visible) {
+}
+
+button:focus:not(:focus-visible) {
   outline: 0;
-}input,
+}
+
+input,
 button,
 select,
 optgroup,
@@ -141,45 +211,67 @@ textarea {
   font-family: inherit;
   font-size: inherit;
   line-height: inherit;
-}button,
+}
+
+button,
 input {
   overflow: visible;
-}button,
+}
+
+button,
 select {
   text-transform: none;
-}[role="button"] {
+}
+
+[role="button"] {
   cursor: pointer;
-}select {
+}
+
+select {
   word-wrap: normal;
-}button,
+}
+
+button,
 [type="button"],
 [type="reset"],
 [type="submit"] {
   -webkit-appearance: button;
-}button:not(:disabled),
+}
+
+button:not(:disabled),
 [type="button"]:not(:disabled),
 [type="reset"]:not(:disabled),
 [type="submit"]:not(:disabled) {
   cursor: pointer;
-}button::-moz-focus-inner,
+}
+
+button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
 [type="submit"]::-moz-focus-inner {
   padding: 0;
   border-style: none;
-}input[type="radio"],
+}
+
+input[type="radio"],
 input[type="checkbox"] {
   box-sizing: border-box;
   padding: 0;
-}textarea {
+}
+
+textarea {
   overflow: auto;
   resize: vertical;
-}fieldset {
+}
+
+fieldset {
   min-width: 0;
   padding: 0;
   margin: 0;
   border: 0;
-}legend {
+}
+
+legend {
   display: block;
   width: 100%;
   max-width: 100%;
@@ -189,27 +281,45 @@ input[type="checkbox"] {
   line-height: inherit;
   color: inherit;
   white-space: normal;
-}progress {
+}
+
+progress {
   vertical-align: baseline;
-}[type="number"]::-webkit-inner-spin-button,
+}
+
+[type="number"]::-webkit-inner-spin-button,
 [type="number"]::-webkit-outer-spin-button {
   height: auto;
-}[type="search"] {
+}
+
+[type="search"] {
   outline-offset: -2px;
   -webkit-appearance: none;
-}[type="search"]::-webkit-search-decoration {
+}
+
+[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
-}::-webkit-file-upload-button {
+}
+
+::-webkit-file-upload-button {
   font: inherit;
   -webkit-appearance: button;
-}output {
+}
+
+output {
   display: inline-block;
-}summary {
+}
+
+summary {
   display: list-item;
   cursor: pointer;
-}template {
+}
+
+template {
   display: none;
-}[hidden] {
+}
+
+[hidden] {
   display: none !important;
 }
 /*# sourceMappingURL=bootstrap-reboot.css.map */
