--- a/css/magnific-popup.css
+++ b/css/magnific-popup.css
@@ -8,7 +8,9 @@
     overflow: hidden;
     position: fixed;
     background: #0b0b0b;
-    opacity: 0.8; }.mfp-wrap {
+    opacity: 0.8; }
+
+.mfp-wrap {
     top: 0;
     left: 0;
     width: 100%;
@@ -16,7 +18,9 @@
     z-index: 1043;
     position: fixed;
     outline: none !important;
-    -webkit-backface-visibility: hidden; }.mfp-container {
+    -webkit-backface-visibility: hidden; }
+
+.mfp-container {
     text-align: center;
     position: absolute;
     width: 100%;
@@ -24,38 +28,62 @@
     left: 0;
     top: 0;
     padding: 0 8px;
-    box-sizing: border-box; }.mfp-container:before {
+    box-sizing: border-box; }
+
+.mfp-container:before {
     content: '';
     display: inline-block;
     height: 100%;
-    vertical-align: middle; }.mfp-align-top .mfp-container:before {
-    display: none; }.mfp-content {
+    vertical-align: middle; }
+
+.mfp-align-top .mfp-container:before {
+    display: none; }
+
+.mfp-content {
     position: relative;
     display: inline-block;
     vertical-align: middle;
     margin: 0 auto;
     text-align: left;
-    z-index: 1045; }.mfp-inline-holder .mfp-content,
+    z-index: 1045; }
+
+.mfp-inline-holder .mfp-content,
 .mfp-ajax-holder .mfp-content {
     width: 100%;
-    cursor: auto; }.mfp-ajax-cur {
-    cursor: progress; }.mfp-zoom-out-cur, .mfp-zoom-out-cur .mfp-image-holder .mfp-close {
+    cursor: auto; }
+
+.mfp-ajax-cur {
+    cursor: progress; }
+
+.mfp-zoom-out-cur, .mfp-zoom-out-cur .mfp-image-holder .mfp-close {
     cursor: -moz-zoom-out;
     cursor: -webkit-zoom-out;
-    cursor: zoom-out; }.mfp-zoom {
+    cursor: zoom-out; }
+
+.mfp-zoom {
     cursor: pointer;
     cursor: -webkit-zoom-in;
     cursor: -moz-zoom-in;
-    cursor: zoom-in; }.mfp-auto-cursor .mfp-content {
-    cursor: auto; }.mfp-close,
+    cursor: zoom-in; }
+
+.mfp-auto-cursor .mfp-content {
+    cursor: auto; }
+
+.mfp-close,
 .mfp-arrow,
 .mfp-preloader,
 .mfp-counter {
     -webkit-user-select: none;
     -moz-user-select: none;
-    user-select: none; }.mfp-loading.mfp-figure {
-    display: none; }.mfp-hide {
-    display: none !important; }.mfp-preloader {
+    user-select: none; }
+
+.mfp-loading.mfp-figure {
+    display: none; }
+
+.mfp-hide {
+    display: none !important; }
+
+.mfp-preloader {
     color: #CCC;
     position: absolute;
     top: 50%;
@@ -68,9 +96,15 @@
 .mfp-preloader a {
     color: #CCC; }
 .mfp-preloader a:hover {
-    color: #FFF; }.mfp-s-ready .mfp-preloader {
-    display: none; }.mfp-s-error .mfp-content {
-    display: none; }button.mfp-close,
+    color: #FFF; }
+
+.mfp-s-ready .mfp-preloader {
+    display: none; }
+
+.mfp-s-error .mfp-content {
+    display: none; }
+
+button.mfp-close,
 button.mfp-arrow {
     overflow: visible;
     cursor: pointer;
@@ -82,9 +116,13 @@ button.mfp-arrow {
     padding: 0;
     z-index: 1046;
     box-shadow: none;
-    touch-action: manipulation; }button::-moz-focus-inner {
+    touch-action: manipulation; }
+
+button::-moz-focus-inner {
     padding: 0;
-    border: 0; }.mfp-close {
+    border: 0; }
+
+.mfp-close {
     width: 44px;
     height: 44px;
     line-height: 44px;
@@ -103,21 +141,29 @@ button.mfp-arrow {
 .mfp-close:focus {
     opacity: 1; }
 .mfp-close:active {
-    top: 1px; }.mfp-close-btn-in .mfp-close {
-    color: #333; }.mfp-image-holder .mfp-close,
+    top: 1px; }
+
+.mfp-close-btn-in .mfp-close {
+    color: #333; }
+
+.mfp-image-holder .mfp-close,
 .mfp-iframe-holder .mfp-close {
     color: #FFF;
     right: -6px;
     text-align: right;
     padding-right: 6px;
-    width: 100%; }.mfp-counter {
+    width: 100%; }
+
+.mfp-counter {
     position: absolute;
     top: 0;
     right: 0;
     color: #CCC;
     font-size: 12px;
     line-height: 18px;
-    white-space: nowrap; }.mfp-arrow {
+    white-space: nowrap; }
+
+.mfp-arrow {
     position: absolute;
     opacity: 0.65;
     margin: 0;
@@ -151,20 +197,26 @@ button.mfp-arrow {
 .mfp-arrow:before {
     border-top-width: 21px;
     border-bottom-width: 21px;
-    opacity: 0.7; }.mfp-arrow-left {
+    opacity: 0.7; }
+
+.mfp-arrow-left {
     left: 0; }
 .mfp-arrow-left:after {
     border-right: 17px solid #FFF;
     margin-left: 31px; }
 .mfp-arrow-left:before {
     margin-left: 25px;
-    border-right: 27px solid #3F3F3F; }.mfp-arrow-right {
+    border-right: 27px solid #3F3F3F; }
+
+.mfp-arrow-right {
     right: 0; }
 .mfp-arrow-right:after {
     border-left: 17px solid #FFF;
     margin-left: 39px; }
 .mfp-arrow-right:before {
-    border-left: 27px solid #3F3F3F; }.mfp-iframe-holder {
+    border-left: 27px solid #3F3F3F; }
+
+.mfp-iframe-holder {
     padding-top: 40px;
     padding-bottom: 40px; }
 .mfp-iframe-holder .mfp-content {
@@ -172,7 +224,9 @@ button.mfp-arrow {
     width: 100%;
     max-width: 900px; }
 .mfp-iframe-holder .mfp-close {
-    top: -40px; }.mfp-iframe-scaler {
+    top: -40px; }
+
+.mfp-iframe-scaler {
     width: 100%;
     height: 0;
     overflow: hidden;
@@ -185,7 +239,9 @@ button.mfp-arrow {
     width: 100%;
     height: 100%;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
-    background: #000; }/* Main image in popup */
+    background: #000; }
+
+/* Main image in popup */
 img.mfp-img {
     width: auto;
     max-width: 100%;
@@ -194,7 +250,9 @@ img.mfp-img {
     line-height: 0;
     box-sizing: border-box;
     padding: 40px 0 40px;
-    margin: 0 auto; }/* The shadow behind the image */
+    margin: 0 auto; }
+
+/* The shadow behind the image */
 .mfp-figure {
     line-height: 0; }
 .mfp-figure:after {
@@ -216,20 +274,30 @@ img.mfp-img {
     font-size: 12px;
     line-height: 14px; }
 .mfp-figure figure {
-    margin: 0; }.mfp-bottom-bar {
+    margin: 0; }
+
+.mfp-bottom-bar {
     margin-top: -36px;
     position: absolute;
     top: 100%;
     left: 0;
     width: 100%;
-    cursor: auto; }.mfp-title {
+    cursor: auto; }
+
+.mfp-title {
     text-align: left;
     line-height: 18px;
     color: #F3F3F3;
     word-wrap: break-word;
-    padding-right: 36px; }.mfp-image-holder .mfp-content {
-    max-width: 100%; }.mfp-gallery .mfp-image-holder .mfp-figure {
-    cursor: pointer; }@media screen and (max-width: 800px) and (orientation: landscape), screen and (max-height: 300px) {
+    padding-right: 36px; }
+
+.mfp-image-holder .mfp-content {
+    max-width: 100%; }
+
+.mfp-gallery .mfp-image-holder .mfp-figure {
+    cursor: pointer; }
+
+@media screen and (max-width: 800px) and (orientation: landscape), screen and (max-height: 300px) {
     /**
          * Remove all paddings around the image on small screen
          */
@@ -266,7 +334,9 @@ img.mfp-img {
         background: rgba(0, 0, 0, 0.6);
         position: fixed;
         text-align: center;
-        padding: 0; } }@media all and (max-width: 900px) {
+        padding: 0; } }
+
+@media all and (max-width: 900px) {
     .mfp-arrow {
         -webkit-transform: scale(0.75);
         transform: scale(0.75); }
